fix(about-me): Adapt language alignment

--- a/pages/style.css
+++ b/pages/style.css
@@ -49,14 +49,6 @@
     --to-deg:var(--value-percentage20);
 }
 
-.ch-grid {
-	padding: 0;
-	list-style: none;
-	display: block;
-	text-align: center;
-	width: 100%;
-}
-
 .ch-grid:after,
 .circle:before {
 	content: '';
